--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
                     node-version: 18
                     registry-url: 'https://registry.npmjs.org/'
             -   run: npm ci
-            -   run: npm version ${{ github.event.release.tag_name }} --workspaces
+            -   run: npm version ${{ github.event.release.tag_name }}
             -   run: npm run build
             -   run: npm publish --access public
                 env:
