--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
-                run: |
+            -   run: |
                     git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
                     git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
             -   uses: actions/setup-node@v3
